--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A starter repo for the ACA Advanced `My First Web Server` project.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js",
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/mxviteri/advanced-first-web-server#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   }
 }
